Remove course about description header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -40,7 +40,7 @@
 <div id="course-about">
 <div class="row">
 <div class="small-12 columns about-course">
-  <h5>About this course</h5>
+  <!-- <h5>About this course</h5> -->
   <div class="row">
     <div class="small-12 medium-6 columns">
       <div class="course-desc" id="scstyle">
