header text added for insert audio, image, template overlay

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
@@ -187,6 +187,7 @@ $("#btnUploadCancel").click(function() {
                     </div>
   <br> <br>
 {% endcomment %}
+<h4>Select Image</h4>
   <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4" >
     {% for each in imageCollection %}
     
