--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/audioDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/audioDashboard.html
@@ -64,6 +64,7 @@
     </div>
 
     <div id="audios-container"></div>
+    <h4>Select Audio: </h4>
     <div class="row">
     {% for each in audioCollection %}
 
