--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/templates_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/templates_list.html
@@ -22,6 +22,7 @@ a:hover + .box,.box:hover{
 
 {% endblock %}
 {% block body_content %}
+<h4>Select Template</h4>
     <div class="row"> 
         {% for each in templates_cur %}
             <div class="small-12 medium-6 large-2 columns template-list" data-content="{{each.content}}">
