--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -108,8 +108,8 @@
         <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
 
         {% endif %}
-        <div class="row right">
-            <button type="button" class="orange-button delete-asset-content" title="Click on the checkbox on the files below to Delete">Delete Files</button>
+        <div class="row">
+            <button type="button" class="orange-button delete-asset-content right" title="Click on the checkbox on the files below to Delete">Delete Files</button>
         </div>
 
 
