commented delete lesson

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -290,7 +290,7 @@ This will not be used because now only existing activities will be added.
                     <li class="lesson_move_up">Move up</li>
                     <li class="lesson_move_down">Move down</li>
                     <li class="lesson_edit">Edit</li>
-                    <li class="lesson_delete">Delete</li>
+                    <!-- <li class="lesson_delete">Delete</li> -->
                 </ul>
             </div>
         </a>
