--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_audio_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_audio_player.html
@@ -6,6 +6,7 @@
 	 <audio controls="" width="100px" id="audio-player-{{audio_obj.pk}}">
 	 <source src="{{MEDIA_URL}}{{audio_obj.if_file.original.relurl}}" type="audio/mp3"/>
 	 </audio>
+</div>
  	<!-- Transcript -->
     {% get_relation_value audio_obj.pk 'has_transcript' as transcript_rel %}
 	{% if transcript_rel %}
@@ -14,10 +15,9 @@
 		<input align="right" id="toggler" type="checkbox" />
 			<label class="toggle-me" for="toggler">Transcript</label>
 		<div class="transcript">
-			<object type="text/html" data="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}" style="width:100%; height:100%">
+			<object type="text/html" data="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}" style="width:99%!important; height:auto!important;word-wrap: break-word;">
 			</object>
 		</div>
 	</form>
 	{% endif %}
-</div>
 	{% endif %}
