--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -90,7 +90,8 @@
                         <!--<button asset-save-button type="button" class ="right orange-button save-asset" id="" value="Save"/>-->
                        <!-- <li><input type="submit" name="save" value="Save" class="save-unit"></li>-->
     <div class="row">
-       <button type="button" class ="right asset-unit-button" id="save_unit">Save</button>
+        
+        <input type="submit" class ="asset-unit-button" id="save_unit" value="Save"/>
     </div>
 
 </div>
