assetcontent form labels changed.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -85,14 +85,14 @@
         <div class="name-desc-asset-cont-area" style="display: none">
             <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
-                    <label>Asset Content Name *
+                    <label>Enter File Name *
                         <input type="text" placeholder="Enter Asset Content's name" class="required" id = "asset_content_name" name="" />
                     </label>
                 </div>
             </div>
             <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
-                <label> Asset Content Description *<br/>
+                <label>Enter File Description *<br/>
                     <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Asset Content's Description" id="asset_content_desc"></textarea>
                 </label>
                 </div>
