AssetContent Description text not visible & Changed AssetContent form field labels

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -1083,6 +1083,10 @@ input[type="button"] {
     margin-left: 24px;
 }
 
+#asset_content_desc, #asset_content_name{
+    color: black !important;
+    font-size: 13px; 
+}
 
 /*  Buttons custom css */
 .button-hollow-white {    background: inherit;
