--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -82,18 +82,18 @@
 
         </div>
 
-        <div class="name-desc-asset-cont-area" style="display: none">
+        <div class="name-desc-asset-cont-area hide">
             <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
                     <label>Enter File Name *
-                        <input type="text" placeholder="Enter Asset Content's name" class="required" id = "asset_content_name" name="" />
+                        <input type="text" placeholder="Enter File name" class="required" id = "asset_content_name" name="" />
                     </label>
                 </div>
             </div>
             <div class="row">
                 <div class="small-8 medium-6 large-6 columns">
                 <label>Enter File Description *<br/>
-                    <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter Asset Content's Description" id="asset_content_desc"></textarea>
+                    <textarea rows="4" cols="2" class="small-12 columns" placeholder="Enter File Description" id="asset_content_desc"></textarea>
                 </label>
                 </div>
                 <div class="small-4 columns">
@@ -168,7 +168,7 @@
 <script type="text/javascript">
 
     $("#docFile").change(function(){
-        $(".name-desc-asset-cont-area").css('display','block')
+        $(".name-desc-asset-cont-area").removeClass("hide")
         $("#upload_asset").removeClass("hide")
     });
 
