css applied for profile pic header

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -681,9 +681,6 @@ h5{
 }
 
 
-
-
-
 #menu_bar_gstudio {
     .user-profile-pic-small {
         height: 46px;
@@ -2871,4 +2868,9 @@ ul.jqtree-tree .jqtree-toggler {
 
 #upload_asset{
     margin-top: 60px !important;
+}
+
+#profile-img {
+    height: 40px;
+    margin-right: 5px;
 }
