removed min-height for tab content

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -832,7 +832,7 @@ ul.horizontal_tabs_gstudio {
         background: #eefaff;
     }
     .group_sections_content {
-        min-height: 400px;
+        // min-height: 400px;
         background-color: #fff;
         margin-bottom: 100px;
     }
