conflicts resolved in unit_structure.html

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_structure.html
@@ -312,7 +312,7 @@ This will not be used because now only existing activities will be added.
                 </ul>
             </div>
         </a>
-        <div id="lesson-{{id}}" class="content lesson-container active">
+        <div id="lesson-{{id}}" class="content lesson-container">
             <ul class="course-activities">
                 {{#each activities}}
                     <li id="activity-{{id}}" data-name="{{name}}">
