--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -129,7 +129,7 @@
                         {% endif %}
                     </div>
                     <div class="asset_text">
-                        <div class="asset_title">{{each.name|truncatechars:35}}
+                        <div class="asset_title" style="color: #2e3f51">{{each.name|truncatechars:35}}
                         </a>
                         {% if user.is_authenticated  and not group_object.edit_policy == "NON_EDITABLE"  or gstaff_access %}
                         <input type="checkbox" class="filenode" name="filenode" value="{{each.pk}}" style="margin:0; float:right;" class="asset_content_checkbox">
