--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -2546,7 +2546,9 @@ ul.jqtree-tree .jqtree-toggler {
             .course-editor-section {
                 width: 72%;
                 opacity: 1;
-                overflow-x: auto;
+                max-width: 100%;
+                
+                overflow-x: hidden;
                 //display: inline-block;
                 transition: width 1.9s ease, opacity 4s ease;
                 -webkit-transition: width 1.9s ease, opacity 4s ease;
@@ -2847,8 +2849,8 @@ ul.jqtree-tree .jqtree-toggler {
 }
 
 #activity-content{
- height:30rem!important;   
-}
+//  height:30rem!important;   
+ }
 .bg-img{
     //background: url(/static/ndf/images/group-tile.png) no-repeat;
     background: url(/static/ndf/images/landing.jpg);
