--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -107,10 +107,11 @@
         <input type="hidden" name="context_name" value="{{title}}">
         <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
 
-        {% endif %}
         <div class="row">
             <button type="button" class="orange-button delete-asset-content right" title="Click on the checkbox on the files below to Delete">Delete Files</button>
+            <button type="button" class="orange-button edit-metadata right">Edit Metadata</button>
         </div>
+        {% endif %}
 
 
         <div class="row">
@@ -356,5 +357,19 @@
         xhr.send(formData);
       }
 
-
+$( ".edit-metadata" ).click(function(event) {
+    $.ajax({
+              type: "POST",
+              data:{
+                    'csrfmiddlewaretoken': "{{csrf_token}}",
+                    "node_id":'{{asset_obj}}',
+                },
+              url: "{% url 'get_metadata_page' group_id  %}",
+              datatype: "html",
+              success: function(data) {
+              $('#addAsset').foundation('reveal', 'open');
+              $('#addAsset').html(data);
+            }
+        });
+});
 </script>
