--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -107,10 +107,12 @@
         <input type="hidden" name="context_name" value="{{title}}">
         <input type="hidden" class ="asset_obj_val" name="asset_obj_name" data-asset-obj-val="">
 
+        {% if asset_content_list %}
         <div class="row">
             <button type="button" class="orange-button delete-asset-content right" title="Click on the checkbox on the files below to Delete">Delete Files</button>
             <button type="button" class="orange-button edit-metadata right">Edit Metadata</button>
         </div>
+        {% endif %}
         {% endif %}
 
 
